<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS Xposed</string>
    <string name="action_settings">Settings</string>
 	<string name="replace_smiley_title">Enter Key</string>
    <string name="replace_smiley_summary">Replace Smiley Button with Enter Button </string>
    <string name="no_fullscreen_title">No Fullscreen</string>
    <string name="no_fullscreen_summary">Disable Fullscreen for keyboard in Landscape mode </string>
    <string name="replace_punctuation_title">Voice Punctuation</string>
    <string name="replace_punctuation_summary">Replace words by corresponding punctuations in voice input</string>
    <string name="privacy_mode_title">Privacy mode</string>
    <string name="privacy_mode_summary">Hides the sender and text message when receiving a SMS notification</string>
    <string name="privacy_show_sender_title">Privacy - show Sender</string>
    <string name="privacy_show_sender_summary">Shows the sender in privacy mode</string>
    <string name="privacy_add_show_btn_title">(ROOT)Privacy - add Show Button</string>
    <string name="privacy_add_show_btn_summary">The Show button will reveal SMS sender and text and action buttons</string>
    <string name="unlimited_textbox_title">Unlimited Textbox</string>
    <string name="unlimited_textbox_summary">Removes the 3-lines height limit for the SMS typing box</string>
    <string name="wake_on_new_SMS_title">Wake on new SMS</string>
    <string name="wake_on_new_SMS_summary">Turns the screen on when receiving a new sms</string>
    <string name="flash_flashlight_title">Flash flashlight</string>
    <string name="flash_flashlight_summary">Flash the flashlight when receiving a new sms</string>
    <string name="sms_icon_color_title">Choose SMS icon color</string>
    <string name="sms_icon_color_summary">Choose the color of the sms icon in the status bar</string>
    <string name="add_buttons_title">Notification buttons</string>
    <string name="add_buttons_summary">Adds the \'Respond\', \'Call\' and \'Mark as read\' buttons in SMS notifications</string>
    <string name="sms_custom_icon_color_toggle_title">Activate custom icon color</string>
    <string name="sms_custom_icon_color_toggle_summary"></string>
    <string name="changes_apply_on_reboot">Don\'t forget to reboot for changes to take effect</string>
    <string name="crash_toast_text">bug report</string>
    <string name="to_recipe">To: </string>
    <string name="all_sms_apps">All SMS Apps tweaks</string>
    <string name="stock_or_hangouts">AOSP SMS or Hangouts</string>
    <string name="stock_only">AOSP SMS app only</string>
    <string name="root_needed">Root is needed for this functionnality</string>
    <string name="marked_as_read">Marked as read</string>
     
    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>   
    
    <string-array name="action_buttons_array">
        <item>Call</item>
        <item>Respond</item>
        <item>Mark as read</item>
        <item>Show</item>
    </string-array>
     
    <string-array name="punctuation_array">
        <item>semicolon</item>
        <item>exclamation mark</item>
        <item>question mark</item>
        <item>comma</item>
    </string-array>
    
    <string-array name="symbols_array">
        <item>;</item>
        <item>!</item>
        <item>"?"</item>
        <item>,</item>
    </string-array>
    
    <string-array name="delayed_punctuation_array">
        <item>point</item>
    </string-array>
    
    <string-array name="delayed_symbols_array">
        <item>.</item>
    </string-array>
</resources>
