<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

     <CheckBoxPreference
        android:defaultValue="false"
        android:key="replace_smiley_with_enter_button"
        android:summary="@string/replace_smiley_summary"
        android:title="@string/replace_smiley_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="no_fullscreen_with_keyboard"
        android:summary="@string/no_fullscreen_summary"
        android:title="@string/no_fullscreen_title" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="replace_punctuation_in_voice_dictation"
        android:summary="@string/replace_punctuation_summary"
        android:title="@string/replace_punctuation_title" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="privacy_mode"
        android:summary="@string/privacy_mode_summary"
        android:title="@string/privacy_mode_title" />
    
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="unlimited_textbox"
        android:summary="@string/unlimited_textbox_summary"
        android:title="@string/unlimited_textbox_title" />

</PreferenceScreen>